# ReaderAI

./: .gitignore  CONTRIBUTING.md  README.md  index.html  next.config.js  package-lock.json  package.json  tatus -s
components/: DocumentItem.tsx
lib/: mongodb.ts
models/: Document.ts
pages/: index.tsx
pages/api/: hello.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs  styles.rs
styles/: Home.module.css  Reader.module.css  globals.css
