[package]
name = "reader-ai"
version = "0.1.0"
description = "AI-powered reader and note-taking application"
authors = ["ReaderAI Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "http-all", "notification-all", "path-all", "shell-execute", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
